--- a/TR5MidTerm/TR5MidTerm/Views/TR5MidTerm02/Delete.cshtml
+++ b/TR5MidTerm/TR5MidTerm/Views/TR5MidTerm02/Delete.cshtml
@@ -59,6 +59,7 @@
     </dl>
 
     <form asp-action="DeleteConfirmed">
+    @*<form asp-action="Delete">*@
         @Html.AntiForgeryToken()
 
         @* 主鍵欄位（隱藏） *@
