系統02 修正[新增、刪除明細]的partialView傳入

--- a/TR5MidTerm/TR5MidTerm/Views/TR5MidTerm02/EditDetail.cshtml
+++ b/TR5MidTerm/TR5MidTerm/Views/TR5MidTerm02/EditDetail.cshtml
@@ -7,7 +7,7 @@
 <h1 class="mt-2">@ViewData["Title"]</h1>
 
 <div>
-    <form asp-action="Edit" method="post">
+    <form asp-action="EditDetail" method="post">
         @Html.AntiForgeryToken()
 
         <div id="ModelErrorDiv" class="validation-summary-valid text-danger">
