--- a/TR5MidTerm/TR5MidTerm/Views/TR5MidTerm02/Index.cshtml
+++ b/TR5MidTerm/TR5MidTerm/Views/TR5MidTerm02/Index.cshtml
@@ -514,7 +514,7 @@
             const _getClassForDetailContent = function (rowData) {
                 const item = rowData.item;
                 @*debugger;*@
-                console.log(item);
+                @*console.log(item);*@
                 if (item['目前使用度數'] >= 500) {
                     return 'text-danger'; // 紅
                 }
