--- a/TR5MidTerm/TR5MidTerm/Views/TR5MidTerm02/CreateDetail.cshtml
+++ b/TR5MidTerm/TR5MidTerm/Views/TR5MidTerm02/CreateDetail.cshtml
@@ -7,7 +7,7 @@
 <h1 class="mt-2">@ViewData["Title"]</h1>
 
 <div>
-    <form asp-action="Create" method="post">
+    <form asp-action="CreateDetail" method="post">
         @Html.AntiForgeryToken()
 
         @* 錯誤訊息區塊 *@
