--- a/TR5MidTerm/TR5MidTerm/Views/TR5MidTerm02/Delete.cshtml
+++ b/TR5MidTerm/TR5MidTerm/Views/TR5MidTerm02/Delete.cshtml
@@ -12,13 +12,10 @@
 
 <div>
 
-    @*<div class="text-danger">
-            @Html.ValidationSummary(excludePropertyErrors: true, message: "", htmlAttributes: new { @class = "text-danger" })
-        </div>*@
-
-    @*<div id="ModelErrorDiv" class="validation-summary-valid text-danger">
-            <ul></ul>
-        </div>*@
+    @* 錯誤訊息區塊 *@
+    <div id="ModelErrorDiv" class="validation-summary-valid text-danger">
+        <ul></ul>
+    </div>
     <div class="text-danger">
         @Html.ValidationSummary(
             excludePropertyErrors: true,
@@ -52,14 +49,14 @@
 
         <dt class="col-sm-2">@Html.DisplayNameFor(model => model.修改人)</dt>
         <dd class="col-sm-10">@Html.DisplayFor(model => model.修改人)</dd>
-        
+
         <dt class="col-sm-2">@Html.DisplayNameFor(model => model.修改時間)</dt>
         <dd class="col-sm-10">@Html.DisplayFor(model => model.修改時間)</dd>
 
     </dl>
 
     <form asp-action="DeleteConfirmed">
-    @*<form asp-action="Delete">*@
+        @*<form asp-action="Delete">*@
         @Html.AntiForgeryToken()
 
         @* 主鍵欄位（隱藏） *@
@@ -75,3 +72,7 @@
         </div>
     </form>
 </div>
+@section Scripts
+{
+    @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
+}
