--- a/TR5MidTerm/TR5MidTerm/Views/TR5MidTerm02/DeleteDetail.cshtml
+++ b/TR5MidTerm/TR5MidTerm/Views/TR5MidTerm02/DeleteDetail.cshtml
@@ -9,11 +9,17 @@
 
 <h3 class="text-warning">請確認是否刪除此筆水電分表資料？</h3>
 
-<div class="text-danger">
-    @Html.ValidationSummary(excludePropertyErrors: true, message: "", htmlAttributes: new { @class = "text-danger" })
-</div>
+@*<div class="text-danger">
+        @Html.ValidationSummary(excludePropertyErrors: true, message: "", htmlAttributes: new { @class = "text-danger" })
+    </div>*@
+@* 錯誤訊息區塊 *@
 
+<div id="ModelErrorDiv" class="validation-summary-valid text-danger">
+    <ul></ul>
+</div>
 <dl class="row">
+    
+
     <dt class="col-sm-2">@Html.DisplayNameFor(model => model.事業顯示)</dt>
     <dd class="col-sm-10">@Html.DisplayFor(model => model.事業顯示)</dd>
 
