系統03 處理部分Create.cshtml

--- a/TR5MidTerm/TR5MidTerm/Views/TR5MidTerm03/Index.cshtml
+++ b/TR5MidTerm/TR5MidTerm/Views/TR5MidTerm03/Index.cshtml
@@ -294,6 +294,7 @@
             }
 
             const _serverReturned = function (retData) {
+                ShowValidateResult(retData, { filter: '#ModelErrorDiv' });
                 console.log("serverReturned customize: ", retData);
             }
 
